--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div id="orange">
         <div id="yellow">
           <div id="green">
-            <div id="blue">
-              <div id="purple">
+            <div id="indigo">
+              <div id="violet">
                 <div></div> <!-- the grandest child div -->
               </div>
             </div>
